--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -197,7 +197,16 @@
       </div>
     </div>
     <% if @room.livestream %>
-      <video class="h-[720px] w-[1080px]" id="local_video" data-target="video.main" autoplay playsinline></video>
+    <div data-controller="video" data-user="<%=current_user.id%>" data-islivestreamer="<%= current_user.id == @product.user.id %>"  class="">
+      <!-- <video class="h-[720px] w-[1080px]" id="local_video" data-target= "<%= current_user.id == @product.user.id ? 'video.main' : 'video.remote' %>"
+      autoplay playsinline></video> -->
+
+        <video class="h-[720px] w-[1080px]" id="local_video" data-target= "video.main" autoplay playsinline></video>
+        <video class="h-[720px] w-[1080px]" data-target= "video.remote" autoplay playsinline></video>
+
+      <button data-action="video#joinRoom" class="btn btn-light ml-4">Join Room</button>
+    </div>
+
     <% end %>
     <div class="fixedBar md:hidden fixed bottom-0 right-0 left-0 flex justify-around items-center bg-white box-border h-20 shadow-2xl whitespace-nowrap">
 
