--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -198,11 +198,11 @@
     </div>
     <% if @room.livestream %>
     <div data-controller="video" data-user="<%=current_user.id%>" data-islivestreamer="<%= current_user.id == @product.user.id %>"  class="">
-      <!-- <video class="h-[720px] w-[1080px]" id="local_video" data-target= "<%= current_user.id == @product.user.id ? 'video.main' : 'video.remote' %>"
-      autoplay playsinline></video> -->
+      <video class="h-[720px] w-[1080px]" id="local_video" data-target= "<%= current_user.id == @product.user.id ? 'video.main' : 'video.remote' %>"
+      autoplay playsinline></video>
 
-        <video class="h-[720px] w-[1080px]" id="local_video" data-target= "video.main" autoplay playsinline></video>
-        <video class="h-[720px] w-[1080px]" data-target= "video.remote" autoplay playsinline></video>
+        <!-- <video class="h-[720px] w-[1080px]" id="local_video" data-target= "video.main" autoplay playsinline></video>
+        <video class="h-[720px] w-[1080px]" data-target= "video.remote" autoplay playsinline></video> -->
 
       <button data-action="video#joinRoom" class="btn btn-light ml-4">Join Room</button>
     </div>
