--- a/app/views/orders/check.html.erb
+++ b/app/views/orders/check.html.erb
@@ -38,7 +38,7 @@
             "
           >
             <p class="text-gray-700 font-semibold ml-4">訂單編號</p>
-            <p class="text-black mr-4"><%= @order.id%></p>
+            <p class="text-black mr-4"><%= @order.slug%></p>
           </div>
           <div
             class="
