--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="field my-5 mx-auto text-center">
     <%= form.label "房間人數：" %>
     <input type="text" name="room[maxpeople]" class="w-9/12 h-10 border py-1 px-2 focus:border-blue-900 border-gray-400 text-sm font-normal rounded" placeholder="房間人數上限" required= true>
-    <% if room.errors[:end_time].any? %>
+    <% if room.errors[:maxpeople].any? %>
       <div class="text-center text-sm text-red-700"><%= room.errors[:maxpeople][0] %></div>
     <% end %>
   </div>
@@ -30,8 +30,8 @@
     <%= form.check_box :livestream, {class: "w-9/12 h-10 border py-1  focus:border-blue-900 border-gray-400 text-sm rounded"}%>
     <!-- , true, false  -->
     <!-- <input type="checkbox" name="room[livestream]" class="w-9/12 h-10 border py-1  focus:border-blue-900 border-gray-400 text-sm rounded" required= true> -->
-    <% if room.errors[:end_time].any? %>
-      <div class="text-center text-sm text-red-700"><%= room.errors[:maxpeople][0] %></div>
+    <% if room.errors[:livestream].any? %>
+      <div class="text-center text-sm text-red-700"><%= room.errors[:livestream][0] %></div>
     <% end %>
   </div>
   <%= form.hidden_field "product_id" ,value: params["id"]  %>
