cancel joinRoom button

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -205,7 +205,7 @@
         <!-- <video class="h-[720px] w-[1080px]" id="local_video" data-target= "video.main" autoplay playsinline></video>
         <video class="h-[720px] w-[1080px]" data-target= "video.remote" autoplay playsinline></video> -->
 
-      <button data-action="video#joinRoom" class="btn btn-light ml-4">Join Room</button>
+      <!-- <button data-action="video#joinRoom" class="btn btn-light ml-4">Join Room</button> -->
     </div>
 
     <% end %>
